Removed some security issues.

--- a/code/site/src/main/webapp/ass/michael-couck-cv.html
+++ b/code/site/src/main/webapp/ass/michael-couck-cv.html
@@ -125,9 +125,9 @@
             <span class="name name-second">COUCK</span>
         </th>
         <th align="left" rowspan="2" width="25%" class="content" style="font-size: 10px">
-            Phone: +32 (0) 493679684<br>
-            Email: michael.couck@gmail.com<br>
-            GitHub: https://github.com/michaelcouck
+            Phone: *********************<br>
+            Email: *********************<br>
+            GitHub: *********************
         </th>
     </tr>
     <tr>
@@ -342,8 +342,8 @@
                     <td></td>
                     <td class="border-left"></td>
                     <td class="content">
-                        Upgrade the mathematics for machine learning and analytics career trajectory. I opted for machine learning
-                        since this is not a niche market anymore but a mainstream one.
+                        Two years, upgrade the mathematics for machine learning and analytics career trajectory.
+                        I opted for machine learning since this is not a niche market anymore but a mainstream one.
                     </td>
                 </tr>
             </table>
@@ -404,7 +404,7 @@
                     <td class="border-left" height="3px"></td>
                 </tr>
                 <tr>
-                    <td class="dates" nowrap>06/2017 - current</td>
+                    <td class="dates" nowrap>06/2017 -- current</td>
                     <td class="border-left"></td>
                     <td class="function">Domain Architect</td>
                 </tr>
@@ -420,14 +420,18 @@
                         Architectural overview of the domain. Technology stack/decisions/choices.
                         Technical design and architecture of requirements, coaching, code review and quality
                         control. Monitoring development teams. Web and mobile development coaching and overview. Performance tweaking
-                        for the systems. Third line support for production issues.
+                        for the systems. Third line support for production issues. Among the more interesting projects I am lead for or
+                        involved in are an application monitoring tool for predictive alerting for several hundred applications using
+                        predictive models, neural networks and statistical. A recommendation tool for proposing content to users
+                        based on collaborative filtering.
                     </td>
                 </tr>
                 <tr>
                     <td></td>
                     <td class="border-left"></td>
                     <td class="technologies">
-                        Java, Spring, OpenStack, Docker, machine learning, Micro services(Netflix stack), Oracle, Jms, Linux, Maven, Couchbase, Infinispan
+                        Java, Spring, OpenStack, Docker, machine learning, Micro services(Netflix stack), Oracle, Jms, Linux, Maven, Couchbase, Infinispan,
+                        Weka, DeepLearning4J
                     </td>
                 </tr>
             </table>
@@ -687,9 +691,21 @@
                     </td>
                 </tr>
                 <tr>
+                    <td class="bold-black" align="right">NodeJS:</td>
+                    <td align="left" width="100%">
+                        <div class="skill-hr" style="width: 35%;">&nbsp;</div>
+                    </td>
+                </tr>
+                <tr>
                     <td class="bold-black" align="right">OpenShift:</td>
                     <td align="left" width="100%">
                         <div class="skill-hr" style="width: 50%;">&nbsp;</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="bold-black" align="right">Blockchain:</td>
+                    <td align="left" width="100%">
+                        <div class="skill-hr" style="width: 35%;">&nbsp;</div>
                     </td>
                 </tr>
             </table>
